# QuantumOS

./: .gitignore  MainOS.py  README.md  The blank window... or is it?.spec  copyrights.txt  emails.txt  findSomeInterestingNumbers.py  game.py  pyproject.toml  rect list formatting.txt  sandboxescape.py  testCode.py  to-do list.txt  zBlockIndexes.txt  zUnicode.txt
Text/: Unicode.txt  copyrights.txt  ids.txt  sandboxescape.txt
decode/: decodeBarriers.py  decodeBlocks.py  decodeBorders.py  decodeBoxes.py  decodeHitboxes.py  decodePlayer.py  decodeText.py
game/: game.py
getData/: blockData.py  constantUpdateStationaryTextData.py  debugWorldItems.py  healthbarData.py  hitboxData.py  stationaryBoxData.py  stationaryTextData.py  textData.py  worldItems.py
objects/: decodeBlocks.py  decodeObjects.py  rectObjects.py
pictures/: LettersAndPuntuationSandboxEs cape.pixil  Text - SandboxEscape - V1.pixil  Text - SandboxEscape - V2.pixil
